--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "ghostpool",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun run index.ts",
+    "dev": "bun --watch run index.ts",
+    "build": "bun build ./index.ts --outdir ./dist"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^20.17.46"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "decimal.js": "^10.5.0",
-    "lmdb": "^3.2.6"
+    "@types/socket.io": "^3.0.2",
+    "blake2b": "^2.1.4",
+    "chart.js": "^4.4.9",
+    "decimal.js": "^10.4.3",
+    "lmdb": "^2.8.0",
+    "socket.io": "^4.7.4"
   }
 }
